--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ color:white;}
 </head>
 <body>
 <div class="n">
-<a href="https://youtube.com" >ホーム</a>
+<a href="https://1998ky262.github.io/Scratch.intro.com/" >ホーム</a>
 </div>
 <h1 class="title">イントロのチュートリアルサイト</h1>
 <h1>最新記事</h1>
