--- a/Intro-type.html
+++ b/Intro-type.html
@@ -4,14 +4,19 @@
 <title>イントロのチュートリアル</title>
 <style>
 body{text-align:center;font-family:  "ヒラギノ角ゴ ProN W3", HiraKakuProN-W3, 游ゴシック, "Yu Gothic", メイリオ, Meiryo, Verdana, Helvetica, Arial, sans-serif;
-background-color:#ececec;}
+background-color:#ececec;
+line-height:50px;
+}
 .title{ color:#ff006f;}
 .n{background-color:#ff006f;
 color:white;
 font-size:30px;}
 a{text-decoration-line:none;
 color:white;}
-
+.black{color:#ff006f;
+font-weight:lighter;
+}
+.img{text-align:center;}
 </style>
 </head>
 <body>
@@ -19,8 +24,18 @@ color:white;}
 <a href="https://1998ky262.github.io/Scratch.intro.com/" >ホーム</a>
 </div>
 <h1 class="title"></h1>
-<h1>最新記事</h1>
-<h2>現在はまだありません</h2>
+<h1>イントロの種類</h1>
+<p>こんにちは。今回は、イントロの種類について伝えたいと思います。<br>イントロにはたくさんの種類があります。<br><h2>Panzoid</h2>
+<div class="img"><img  src="https://cdn2.scratch.mit.edu/get_image/project/499025389_480x360.png"></div>
+まず最初に、Panzoid(パンゾイド)です。<br>パンゾイドは、<a class="black" href="https://panzoid.com">Panzoid</a>というサイトのイントロに似ていることから、<br>そのサイトの名が付けられました。<br>恐らく一番人気のあるスタイルでしょう。
+<h2>minimal</h2>
+<div class="img"><img  src="https://cdn2.scratch.mit.edu/get_image/project/632594389_480x360.png"></div>
+続いてはminimal(ミニマル)です。Scratch Styleと呼ばれることもあります。<br>
+恐らく2番目に人気のあるスタイルだと思います。<br>初心者にはパンゾイドイントロを作ることは難しいので、<br>最初はminimalスタイルのイントロを作ることをお勧めします。<br>
+<h2>最後に</h2>如何だったでしょうか？他にもChillzoidやminimazoid、Parallaxなどもあります。<br>これを通してイントロに興味を持っていただければ嬉しいです。
+
+
+</p>
 </body>
 </html>
       
