--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ color:white;}
 </div>
 <h1 class="title">イントロのチュートリアルサイト</h1>
 <h1>最新記事</h1>
-<h2>イントロの種類について</h2>
-      <p>by 1998ky262<p>
+<h2>まだないです。</h2>
+      
 </body>
 </html>
       
