--- a/Intro-type.html
+++ b/Intro-type.html
@@ -21,7 +21,7 @@ font-weight:lighter;
 </head>
 <body>
 <div class="n">
-<a href="https://1998ky262.github.io/Scratch.intro.com/" >ホーム</a>
+<a href="https://1998ky262.github.io/Scratch-intro-com/" >ホーム</a>
 </div>
 <h1 class="title"></h1>
 <h1>イントロの種類</h1>
