--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
 <html>
 <head>
-<meta charset="UTF-8">
 <title>イントロのチュートリアル</title>
-<style>
-body{text-align:center;font-family:  "ヒラギノ角ゴ ProN W3", HiraKakuProN-W3, 游ゴシック, "Yu Gothic", メイリオ, Meiryo, Verdana, Helvetica, Arial, sans-serif;
-background-color:#ececec;}
-.title{ color:#ff006f;}
-.n{background-color:#ff006f;
-color:white;
-font-size:30px;}
-a{text-decoration-line:none;
-color:white;}
-
-</style>
 </head>
 <body>
-<div class="n">
-<a href="https://1998ky262.github.io/Scratch-intro-com/" >ホーム</a>
-</div>
 <h1 class="title">イントロのチュートリアルサイト</h1>
 <h1>最新記事</h1>
 <h2>まだないです。</h2>
-      
+      <script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
 </body>
 </html>
       
