--- a/Intro-type.html
+++ b/Intro-type.html
@@ -2,17 +2,8 @@
 <head>
 <meta charset="UTF-8">
 <title>イントロのチュートリアル</title>
+<script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
 <style>
-body{text-align:center;font-family:  "ヒラギノ角ゴ ProN W3", HiraKakuProN-W3, 游ゴシック, "Yu Gothic", メイリオ, Meiryo, Verdana, Helvetica, Arial, sans-serif;
-background-color:#ececec;
-line-height:50px;
-}
-.title{ color:#ff006f;}
-.n{background-color:#ff006f;
-color:white;
-font-size:30px;}
-a{text-decoration-line:none;
-color:white;}
 .black{color:#ff006f;
 font-weight:lighter;
 }
@@ -20,10 +11,6 @@ font-weight:lighter;
 </style>
 </head>
 <body>
-<div class="n">
-<a href="https://1998ky262.github.io/Scratch-intro-com/" >ホーム</a>
-</div>
-<h1 class="title"></h1>
 <h1>イントロの種類</h1>
 <p>こんにちは。今回は、イントロの種類について伝えたいと思います。<br>イントロにはたくさんの種類があります。<br><h2>Panzoid</h2>
 <div class="img"><img  src="https://cdn2.scratch.mit.edu/get_image/project/499025389_480x360.png"></div>
