404ページを追加

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-    404 page not found
+    <h1>404 page not found<h1>
     
     <script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
   </body>
