--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h1 class="title">イントロのチュートリアルサイト</h1>
 <h1>最新記事</h1>
-<h2>まだないです。</h2>
+<h2>作成中</h2>
       <script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
 </body>
 </html>
