--- a/intro-structure.html
+++ b/intro-structure.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Introの構造
+            introの構造
         </title>
         <script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
     </head>
@@ -17,7 +17,7 @@
        その1スプライトの中で、クローンを使ったり、凄い人だと、Penでintroを作ったりもします。<br>
        Penによるintroを「Pen」という単語と「intro」という単語を合わせて、「Pentro」と言ったりします。<br>
        <h2>
-        クローンを使ってIntroを作る
+        クローンを使ってintroを作る
        </h2><br>
        基本は、変数を使ってクローンを作るときに自身を識別させます。<br>
        見本は、「shadow」というIDのクローンを作ることにします。<br>
