--- a/Intro-type.html
+++ b/Intro-type.html
@@ -7,7 +7,7 @@
 <h1>イントロの種類</h1>
 <p>こんにちは。今回は、イントロの種類について伝えたいと思います。<br>イントロにはたくさんの種類があります。<br><h2>Panzoid</h2>
 <div class="img"><img  src="https://cdn2.scratch.mit.edu/get_image/project/499025389_480x360.png"></div>
-まず最初に、Panzoid(パンゾイド)です。<br>パンゾイドは、<a class="black" href="https://panzoid.com">Panzoid</a>というサイトのイントロに似ていることから、<br>そのサイトの名が付けられました。<br>恐らく一番人気のあるスタイルでしょう。
+まず最初に、Panzoid(パンゾイド)です。<br>パンゾイドは、<a class="black" href="https://panzoid.com"><strong>Panzoid</strong></a>というサイトのイントロに似ていることから、<br>そのサイトの名が付けられました。<br>恐らく一番人気のあるスタイルでしょう。
 <h2>minimal</h2>
 <div class="img"><img  src="https://cdn2.scratch.mit.edu/get_image/project/632594389_480x360.png"></div>
 続いてはminimal(ミニマル)です。Scratch Styleと呼ばれることもあります。<br>
