--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
 <body>
 <h1 class="title">イントロのチュートリアルサイト</h1>
 <h1>最新記事</h1>
-<h2>作成中</h2>
+      <script>
+            
+             fetch("https://1998ky262.github.io/Scratch-intro-com/article-list.txt")
+  .then(response => response.text())
+  .then(data => {
+                   let text=data.split("\n");
+                   console.log(text)
+                   for(let i=0;i<text.length-1;i++){
+                         let d=text[i].split(",");
+                        let element=document.createElement("div");
+                         element.style="margin:20px auto 0 auto;display:block;width:200px;background-color:#424242;padding:10px;border-radius:10px;border:solid 1.5px #7d7d7d";
+                         if(d[2]==""){
+                           element.innerHTML=`<a href="${d[1]}"><img src="https://uploads.scratch.mit.edu/get_image/project/749833041_100x80.png" height="100" width="150"></a><br><a href="/Scratch-intro-com/${d[1]}">${d[0]}</a><br>`;
+                           document.body.appendChild(element);
+                         }else{
+                           element.innerHTML=`<a href="${d[1]}"><img src="${d[2]}" height="100" width="150"></a><br><a href="${d[1]}">${d[0]}</a><br>`;
+                           document.body.appendChild(element);
+                         }
+                   }
+  });
+      </script>
       <script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
 </body>
 </html>
