--- a/intro-structure.html
+++ b/intro-structure.html
@@ -9,16 +9,16 @@
        <h1>
         introの仕組み
        </h1><br>
-       こんにちは！今回はintroはどういう仕組みでできているのかざっくり説明します。<br>
+       こんにちは！今回はintroはどういう仕組みでできているのかざっくり説明します。
        <h2>
         introは1スプライトで作る
-       </h2><br>
+       </h2>
        まず、いっぱんにintroの中核は1スプライトにより作られます。<br>
        その1スプライトの中で、クローンを使ったり、凄い人だと、Penでintroを作ったりもします。<br>
        Penによるintroを「Pen」という単語と「intro」という単語を合わせて、「Pentro」と言ったりします。<br>
        <h2>
         クローンを使ってintroを作る
-       </h2><br>
+       </h2>
        基本は、変数を使ってクローンを作るときに自身を識別させます。<br>
        見本は、「shadow」というIDのクローンを作ることにします。<br>
        <br>
