--- a/intro-structure.html
+++ b/intro-structure.html
@@ -8,7 +8,7 @@
     <body>
        <h1>
         introの仕組み
-       </h1><br>
+       </h1>
        こんにちは！今回はintroはどういう仕組みでできているのかざっくり説明します。
        <h2>
         introは1スプライトで作る
@@ -21,7 +21,6 @@
        </h2>
        基本は、変数を使ってクローンを作るときに自身を識別させます。<br>
        見本は、「shadow」というIDのクローンを作ることにします。<br>
-       <br>
        
        <div style="margin:0 auto 0 auto;display:inline-block;background-color:#dcdcdc;padding:10px;border-radius:10px">
        <div style="text-align:left">
@@ -32,9 +31,9 @@
 もし＜(クローンID)=(shadow)＞なら<br>
 　　クローン#shadowにさせる処理を記述する<br>
        </div>
-       </div><br><br>
+       </div><br>
        こういった感じのプログラムです。
-       <br><br>
+       <br>
        
        あとは、自分のセンスでデザイン、構成を行っていきましょう。
        <h2>
