--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
 <head>
 <title>イントロのチュートリアル</title>
+      
 </head>
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VQ0KE6MB67"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VQ0KE6MB67');
+</script>
 <body>
+      
 <h1 class="title">イントロのチュートリアルサイト</h1>
 <h1>最新記事</h1>
       <script>
