--- a/intro-structure.html
+++ b/intro-structure.html
@@ -22,15 +22,8 @@
        基本は、変数を使ってクローンを作るときに自身を識別させます。<br>
        見本は、「shadow」というIDのクローンを作ることにします。<br>
        
-       <div style="margin:0 auto 0 auto;display:inline-block;background-color:#dcdcdc;padding:10px;border-radius:10px">
-       <div style="text-align:left">
-       変数[クローンID]を(shadow)にする<br>
-       (自分自身▼)のクローンを作成する<br>
-       <br>
-^クローンされたとき<br>
-もし＜(クローンID)=(shadow)＞なら<br>
-　　クローン#shadowにさせる処理を記述する<br>
-       </div>
+       <div style="margin:0 auto 0 auto;display:inline-block;background-color:#dcdcdc;padding:10px;border-radius:10px;text-align:left">
+       <img src="/Scratch-intro-com/by-fortune.png" height="180" width="240">
        </div><br>
        こういった感じのプログラムです。
        <br>
