--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -8,6 +8,7 @@
 <h1>JIMOについて</h1>
 <h2>JIMOとは</h2>
 <p>JIMOとはJAPANESE INTRO MAKERS Organizationの略で<br>
-  日本のイントロメーカーが集まっているスタジオです。</p>  
+  日本のイントロメーカーが集まっているスタジオです。<br>
+  ここには素晴らしいイントロメーカーの方がたくさんいます。</p>  
 </body>
 </html> 
