--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -9,6 +9,11 @@
 <h2>JIMOとは</h2>
 <p>JIMOとはJAPANESE INTRO MAKERS Organizationの略で<br>
   日本のイントロメーカーが集まっているスタジオです。<br>
-  ここには素晴らしいイントロメーカーの方がたくさんいます。</p>  
+  ここには素晴らしいイントロメーカーの方がたくさんいます。</p>
+<h2>JIMOに入るには？</h2>
+<p>まず、申請をしなければいけません。<br>申請方法は下のスタジオのコメント欄で
+ユーザー名、最高傑作、好き/得意なスタイル、なにか一言をコメントすれば申請できます<br>
+ただし、条件として、日本語が問題なく話せる、3つ以上イントロを作成している、Scratchの最低限のルールを守る、<br>
+というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。</p>  
 </body>
 </html> 
