--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -11,9 +11,10 @@
   日本のイントロメーカーが集まっているスタジオです。<br>
   ここには素晴らしいイントロメーカーの方がたくさんいます。</p>
 <h2>JIMOに入るには？</h2>
-<p>まず、申請をしなければいけません。<br>申請方法は下のスタジオのコメント欄で
-ユーザー名、最高傑作、好き/得意なスタイル、なにか一言をコメントすれば申請できます<br>
-ただし、条件として、日本語が問題なく話せる、3つ以上イントロを作成している、Scratchの最低限のルールを守る、<br>
-というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。</p>  
+<p>まず、申請をしなければいけません。<br>申請方法は下のスタジオのコメント欄で<br>
+ユーザー名、最高傑作、好き/得意なスタイル、なにか一言<br>をコメントすれば申請できます<br>
+ただし、条件として、日本語が問題なく話せる、<br>3つ以上イントロを作成している、Scratchの最低限のルールを守る、<br>
+というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。
+<br><a href="https://scratch.mit.edu/studios/29958336/">申請はこちらから</a></p>  
 </body>
 </html> 
