--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -15,6 +15,6 @@
 ユーザー名、最高傑作、好き/得意なスタイル、なにか一言<br>をコメントすれば申請できます<br>
 ただし、条件として、日本語が問題なく話せる、<br>3つ以上イントロを作成している、Scratchの最低限のルールを守る、<br>
 というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。
-<br><a href="https://scratch.mit.edu/studios/29958336/">申請はこちらから</a></p>  
+<br><a href="https://scratch.mit.edu/studios/29958336/" class="black">申請はこちらから</a></p>  
 </body>
 </html> 
