--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -11,13 +11,15 @@
   日本のイントロメーカーが集まっているスタジオです。<br>
   ここには素晴らしいイントロメーカーの方がたくさんいます。</p>
 <h2>JIMOに入るには？</h2>
-<p>まず、申請をしなければいけません。<br>申請方法は下のスタジオのコメント欄で<br>
+<p>まず、申請をしなければいけません。<br>申請方法は<a href="https://scratch.mit.edu/studios/29958336/" class="black">JIMO公式スタジオ</a>で<br>
 ユーザー名、最高傑作、好き/得意なスタイル、なにか一言<br>をコメントすれば申請できます<br>
 ただし、条件として、日本語が問題なく話せる、<br>3つ以上イントロを作成している、Scratchの最低限のルールを守る、<br>
-というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。
-<br><a href="https://scratch.mit.edu/studios/29958336/" class="black">申請はこちらから</a></p>
+というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。</p>
 <h2>オーナーについて</h2>
 <p>初代オーナーは<a href="https://scratch.mit.edu/users/xX_Freezer_Xx/" class="black">xX_Freezer_Xx氏</a>ですが<br>
-現在は<a href="https://scratch.mit.edu/users/Ashibara_Art/" class="black">Ashibara_Art氏</a>と<a href="https://scratch.mit.edu/users/omowaka/" class="black">omowaka氏</a>が務めています。</p>  
+現在は<a href="https://scratch.mit.edu/users/Ashibara_Art/" class="black">Ashibara_Art氏</a>と<a href="https://scratch.mit.edu/users/omowaka/" class="black">omowaka氏</a>が務めています。</p>
+<h2>一流入りについて</h2> 
+<p>JIMOには一流入りといわれる制度があります。<br>一流入りとは特に優れたイントロメーカーに与えられる称号のようなものです。<br>
+一流入りする条件は<a href="https://scratch.mit.edu/studios/31952464/" class="black">一流入り申請スタジオ</a>で審査を申請して合格することです。</p>  
 </body>
 </html>
