--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -18,8 +18,15 @@
 <h2>オーナーについて</h2>
 <p>初代オーナーは<a href="https://scratch.mit.edu/users/xX_Freezer_Xx/" class="black">xX_Freezer_Xx氏</a>ですが<br>
 現在は<a href="https://scratch.mit.edu/users/Ashibara_Art/" class="black">Ashibara_Art氏</a>と<a href="https://scratch.mit.edu/users/omowaka/" class="black">omowaka氏</a>が務めています。</p>
-<h2>一流入りについて</h2> 
+<h2>一流入りについて</h2>
+<h3>一流入りするには？</h3>  
 <p>JIMOには一流入りといわれる制度があります。<br>一流入りとは特に優れたイントロメーカーに与えられる称号のようなものです。<br>
-一流入りする条件は<a href="https://scratch.mit.edu/studios/31952464/" class="black">一流入り申請スタジオ</a>で審査を申請して合格することです。</p>  
+一流入りする条件は<a href="https://scratch.mit.edu/studios/31952464/" class="black">一流入り申請スタジオ</a>で審査を申請して合格することです。
+<h3>審査基準</h3>
+審査は10点満点で採点され、8点以上で一流入りできます。<br>
+現在では、Master/Advanced/Good Intro Makersという3段階に分かれていて、<br>最初の2つが一流入りの階級です。最上級のMaster Intro Makersは<br>
+9.5点以上でなることができます。
+<h3>注意</h3>
+一度申請したら、次に申請できるのは30日後です。<br>申請をする際には、自分の実力を測る目的で申請してはいけません。</p>  
 </body>
 </html>
