--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -27,6 +27,7 @@
 現在では、Master/Advanced/Good Intro Makersという3段階に分かれていて、<br>最初の2つが一流入りの階級です。最上級のMaster Intro Makersは<br>
 9.5点以上でなることができます。
 <h3>注意</h3>
-一度申請したら、次に申請できるのは30日後です。<br>申請をする際には、自分の実力を測る目的で申請してはいけません。</p>  
+一度申請したら、次に申請できるのは30日後です。<br>申請をする際には、自分の実力を測る目的で申請してはいけません。</p>
+<h6>©Sogatti</h6>
 </body>
 </html>
