--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -16,8 +16,8 @@
 ただし、条件として、日本語が問題なく話せる、<br>3つ以上イントロを作成している、Scratchの最低限のルールを守る、<br>
 というものがあるので注意してください。<br>あとはオーナーによって承認されたら入ることができます。</p>
 <h2>オーナーについて</h2>
-<p>初代オーナーは<a href="https://scratch.mit.edu/users/xX_Freezer_Xx/" class="black">xX_Freezer_Xx氏</a>ですが<br>
-現在は<a href="https://scratch.mit.edu/users/Ashibara_Art/" class="black">Ashibara_Art氏</a>と<a href="https://scratch.mit.edu/users/omowaka/" class="black">omowaka氏</a>が務めています。</p>
+<p>初代オーナーは<a href="https://scratch.mit.edu/users/xX_Freezer_Xx/" class="black">xX_Freezer_Xx</a>氏ですが<br>
+現在は<a href="https://scratch.mit.edu/users/Ashibara_Art/" class="black">Ashibara_Art</a>氏と<a href="https://scratch.mit.edu/users/omowaka/" class="black">omowaka</a>氏が務めています。</p>
 <h2>一流入りについて</h2>
 <h3>一流入りするには？</h3>  
 <p>JIMOには一流入りといわれる制度があります。<br>一流入りとは特に優れたイントロメーカーに与えられる称号のようなものです。<br>
