--- a/article/bad-design.html
+++ b/article/bad-design.html
@@ -16,7 +16,7 @@
         <br>上の例だと、背景が、赤でテキストが紫なので、テキストが糞見にくいです。
         <br>
         こんなの駄目ですね。
-        <br>あとは色は使いすぎないほうがいいです。色を使いすぎると、
+        <br>あとは色は使いすぎないほうがいいです。色を使いすぎると、<br>
         <img src="https://1998ky262.github.io/Scratch-intro-com/images/example2.png" height="360" width="480">
         <br>
         こんなふうに、クソダサくなります。<br>一見キレイと思う人もいるかも知れませんが、こんなのはおかしいですね。
