--- a/article/bad-design.html
+++ b/article/bad-design.html
@@ -29,7 +29,7 @@
         <br>
         なんか僕（yamaguchi03）もあんまり3Dテキストは作ったことはないんですけど、<br>Scratchのデフォルトフォントは何が何でも使いたくありません()
         <br>なので、Inkscapeなどのツールで、「3Dテキスト」というものを作って使いましょう。
-        <br>そう思って、探していたら、ありました。
+        <br>そう思って、探していたら、ありました。<br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/85KKlC6_6Xc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><a href="https://scratch.mit.edu/users/xX_Freezer_Xx/" target="_blank">Xx_Freezer_xXさん</a>の動画ですね。すごくわかりやすいので参考にすると良いと思います。
         <br>あと、きゅうさんのイントロは神なので、一度見てみてください。
