--- a/article/INTRO-FONT.html
+++ b/article/INTRO-FONT.html
@@ -2,7 +2,7 @@
 <head>
 <title>イントロのフォント</title>
 <meta charset="UTF-8">
-<script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
+<script src="../include.js"></script>
 </head>
 <body>
 <h1>イントロに使えるフォント</h1>
