--- a/article/Intro-type.html
+++ b/article/Intro-type.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>イントロのチュートリアル</title>
-<script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
+<script src="../include.js"></script>
 </head>
 <body>
 <h1>イントロの種類</h1>
