--- a/article/IntroDeliv.html
+++ b/article/IntroDeliv.html
@@ -13,5 +13,5 @@
   <h2>中トロ</h2>
   <p>珍しいですが、作品の区切りの間に挟むイントロ「中トロ」もあります。あとりは<a href="https://scratch.mit.edu/projects/563493277/">pikurin様のもの</a>しか見たことがありません。</p>
   <p style="font-size: 2em; text-decoration: underline;"><b>寿司ではありません。</b></p>
-  <script src="/Scratch-intro-com/include.js"></script>
+  <script src="../include.js"></script>
 </body>
