--- a/article/bad-design.html
+++ b/article/bad-design.html
@@ -52,6 +52,6 @@
             まとめ
         </h1>
         まあ、とにかく、頑張れ((
-        <script src="/Scratch-intro-com/include.js"></script>
+        <script src="../include.js"></script>
     </body>
 </html>
