--- a/article/intro-structure.html
+++ b/article/intro-structure.html
@@ -3,7 +3,7 @@
         <title>
             introの構造
         </title>
-        <script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
+        <script src="../include.js"></script>
     </head>
     <body>
        <h1>
@@ -23,7 +23,7 @@
        見本は、「shadow」というIDのクローンを作ることにします。<br>
        
        <div style="margin:0 auto 0 auto;display:inline-block;background-color:#dcdcdc;padding:10px;border-radius:10px;text-align:left">
-       <img src="/Scratch-intro-com/images/by-fortune.png" height="240" width="239">
+       <img src="../images/by-fortune.png" height="240" width="239">
        </div><br>
        こういった感じのプログラムです。
        <br>
