--- a/article/CC.html
+++ b/article/CC.html
@@ -2,7 +2,7 @@
 <head>
 <title>CCについて解説</title>
 <meta charset="UTF-8">
-<script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
+<script src="../include.js"></script>
 </head>
 <body>
 <h1>CC(カメラコントロール)について解説</h1>
