--- a/article/JIMO.html
+++ b/article/JIMO.html
@@ -2,7 +2,7 @@
 <head>
 <title>JIMOについて</title>
 <meta charset="UTF-8">
-<script src="https://1998ky262.github.io/Scratch-intro-com/include.js"></script>
+<script src="../include.js"></script>
 </head>
 <body>
 <h1>JIMOについて</h1>
